Fix links list truncation

--- a/app/assets/stylesheets/default/screen.0720.css.sass
+++ b/app/assets/stylesheets/default/screen.0720.css.sass
@@ -69,14 +69,11 @@
 
   .links
     a:hover
-      color: $external-link-hover-color
-    h2
-      height: $line-height
-      overflow: hidden
-      text-overflow: ellipsis
-      white-space: nowrap
-      p
+      h2, p
+        color: $external-link-hover-color
+    p
       height: $line-height * 2
+      overflow: hidden
 
   .notes
     li
